--- a/starter-code/views/layout.hbs
+++ b/starter-code/views/layout.hbs
@@ -5,6 +5,19 @@
     <link rel='stylesheet' href='/styles/style.css' />
   </head>
   <body>
+    <nav>
+      <a href="/">Home</a>
+      {{#if user}}
+        <a href="/{{user._id}}/profile">{{user.username}}'s Profile</a>
+        <form action="/sign-out" method="POST">
+          <button>Sign Out</button>
+        </form>
+        {{else}}
+        <a href="/sign-in">Sign In</a>
+        <a href="/sign-up">Sign Up</a>
+      {{/if}}
+    </nav>
     {{{body}}}
+   
   </body>
 </html>
