added user's name to the profile page

--- a/starter-code/views/private/profile.hbs
+++ b/starter-code/views/private/profile.hbs
@@ -1,5 +1,5 @@
 {{#with user}}
-  {{#if user}}
+  {{#if name}}
     <h2>{{name}}'s Profile Page</h2>
    {{else}}
     <h2>{{username}}'s Profile Page</h2>
